--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.60.6",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.460.0",
     "match-sorter": "^8.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.7.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
@@ -36,6 +43,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
