--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-to-pdf": "^1.0.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
