--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.460.0",
     "match-sorter": "^8.0.0",
