--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.6",
     "chart.js": "^4.4.6",
