--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-to-pdf": "^1.0.1",
+    "recharts": "^2.13.3",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.0",
     "sort-by": "^1.2.0",
