--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "firebase": "^11.0.2",
+    "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.460.0",
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
+    "@types/firebase": "^3.2.3",
     "@types/node": "^22.9.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
